@@ -165,15 +165,12 @@ on the <a href="http://sourceforge.net/mail/?group_id=161082">httplib2 mailing l
 
        <dt>Contributors</dt>
 
-       <dd>
-       Thomas Broyer (t.broyer@ltgt.net)
-       </dd>
-       <dd>
-       James Antill
-       </dd>
-       <dd>
-       Xavier Verges Farrero 
-       </dd>
+       <dd> Thomas Broyer (t.broyer@ltgt.net) </dd>
+       <dd> James Antill </dd>
+       <dd> Xavier Verges Farrero </dd>
+       <dd> Jonathan Feinberg </dd>
+       <dd> Blair Zajac </dd>
+       <dd> (Your Name Here) </dd>
    </dl>
 </p>
     
